backport refactoring of test framework
git-svn-id: svn://localhost/jahia/branches/JAHIA_7_1_0_0_RC@27461 69c369ed-ed09-0410-a4a1-e19a46c23626