@@ -680,6 +680,43 @@
                 </jahia.modules.bundle.removeheaders>
             </properties>
         </profile>
+        <profile>
+            <id>unit-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${surefire.plugin.version}</version>
+                        <configuration>
+                            <argLine>-Xmx2048m -XX:MaxPermSize=320m</argLine>
+                            <skipTests>false</skipTests>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <testNGArtifactName>none:none</testNGArtifactName>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>test-testng</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <junitArtifactName>none:none</junitArtifactName>
+                                </configuration>
+                            </execution>
+                        </executions>                        
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>        
     </profiles>
 
     <distributionManagement>
